<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    tools:context="com.gen.duo.app.activity.LoginActivity">

    <ImageView
        android:layout_width="225dp"
        android:layout_height="175dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="25dp"
        android:src="@mipmap/duo_gen_logo1" />

    <EditText
        android:id="@+id/edit_text_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/username_hint" />

    <EditText
        android:id="@+id/edit_text_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/password_hint" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/btn_register"
        android:textAllCaps="false" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/agrement"
        android:clickable="true"
        android:textSize="16sp" />

</LinearLayout>
