<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    tools:context="com.gen.duo.app.activity.LoginActivity">

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/duo_gen_logo1" />

        <EditText
            android:id="@+id/edit_text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/username_hint"
            android:text="israj.haliri@gmail.com" />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:text="12345678" />

        <Button
            android:id="@+id/button_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="25dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/btn_login"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/text_view_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/no_account"
            android:textColor="@color/colorBlue"
            android:textSize="16sp" />
    </LinearLayout>

    <include layout="@layout/activity_loading" />

</LinearLayout>
